--- a/platform/ext/common/iar/tfm_isolation_s.icf.template
+++ b/platform/ext/common/iar/tfm_isolation_s.icf.template
@@ -151,7 +151,7 @@ define block ER_RO_DATA {
  * Sort the partition info by priority to guarantee the initing order.
  * The first loaded partition will be inited at last in SFN model.
  */
-define block TFM_SP_LOAD_LIST with alignment = 4 {
+define block TFM_SP_LOAD_LIST with alignment = TFM_LINKER_PT_RO_DATA_ALIGNMENT {
     ro section .part_load
 };
 
@@ -164,7 +164,7 @@ initialize by copy {
     ro object *libflash_drivers*,
 };
 
-define block ER_CODE_SRAM with fixed order, alignment = 4, maximum size = S_RAM_CODE_SIZE {
+define block ER_CODE_SRAM with fixed order, alignment = 32, maximum size = S_RAM_CODE_SIZE {
     rw section .text,
     rw section .rodata,
     rw section .textrw, /* __ramfunc */
@@ -245,7 +245,7 @@ define block STACKSEAL with size = STACKSEAL_SIZE { };
 #endif
 
 #ifdef ENABLE_HEAP
-    define block HEAP with alignment = 8, size = S_HEAP_SIZE { };
+    define block HEAP with alignment = TFM_LINKER_TFM_HEAP_ALIGNMENT, size = S_HEAP_SIZE { };
     define block ARM_LIB_HEAP {block HEAP};
     keep {block HEAP, block ARM_LIB_HEAP};
 #endif
@@ -280,12 +280,12 @@ define block ER_TFM_DATA {
 };
 
 /* The runtime partition placed order is same as load partition */
-define block ER_PART_RT_POOL with alignment = 4 {
+define block ER_PART_RT_POOL with alignment = TFM_LINKER_TFM_BSS_ALIGNMENT {
     zi section .bss.part_runtime
 };
 
 /* The runtime service placed order is same as load partition */
-define block ER_SERV_RT_POOL with alignment = 4 {
+define block ER_SERV_RT_POOL with alignment = TFM_LINKER_TFM_BSS_ALIGNMENT {
     zi section .bss.serv_runtime
 };
 
