BL2: Add mcuboot config for image binding support
Add cmake config 'MCUBOOT_IMAGE_BINDING' to enable image binding support
in mcuboot. By default, it is turned OFF.

Signed-off-by: Maulik Patel <maulik.patel@arm.com>
Change-Id: I1868b78e547c5a65287fe903851d58cdb50d1511

--- a/bl2/ext/mcuboot/include/mcuboot_config/mcuboot_config.h.in
+++ b/bl2/ext/mcuboot/include/mcuboot_config/mcuboot_config.h.in
@@ -37,6 +37,10 @@ extern "C" {
 #cmakedefine MCUBOOT_IMAGE_MULTI_SIG_SUPPORT
 #endif /* MCUBOOT_IMAGE_MULTI_SIG_SUPPORT */
 
+#ifndef MCUBOOT_IMAGE_BINDING
+#cmakedefine MCUBOOT_IMAGE_BINDING
+#endif /* MCUBOOT_IMAGE_BINDING */
+
 /*— How many RoTPK keys per image —*/
 #define MCUBOOT_ROTPK_MAX_KEYS_PER_IMAGE  @MCUBOOT_ROTPK_MAX_KEYS_PER_IMAGE@
 
