BL2: Add image binding tlv support
When image binding is enabled, add extra TLVs 0x00A4 and 0x00A5
for image binding (metadata and tag) during image signing.

Signed-off-by: Maulik Patel <maulik.patel@arm.com>
Change-Id: I2b2f098e20665fc3a775f0f8b84f75c2910656eb

--- a/bl2/ext/mcuboot/CMakeLists.txt
+++ b/bl2/ext/mcuboot/CMakeLists.txt
@@ -251,6 +251,13 @@ if (PLATFORM_DEFAULT_IMAGE_SIGNING)
         ${CMAKE_CURRENT_BINARY_DIR}/tfm_s_signed.bin
     )
 
+    if(MCUBOOT_IMAGE_BINDING)
+        list(APPEND wrapper_args
+            --extra-tlv "${TLV_METADATA}"
+            --extra-tlv "${TLV_BINDING_TAG}"
+        )
+    endif()
+
     if(MCUBOOT_BUILTIN_KEY)
         set(wrapper_args ${wrapper_args} --psa-key-ids ${TFM_S_KEY_ID})
         if(MCUBOOT_IMAGE_MULTI_SIG_SUPPORT AND PLATFORM_DEFAULT_ROTPK)
