BL2: Fix multi-sig issue when S and NS image is combined
When MCUBOOT_IMAGE_MULTI_SIG_SUPPORT is enabled and MCUBOOT_IMAGE_NUMBER=1
(secure and non-secure images combined), also sign the image with the
Non-Secure (NS) key.

Signed-off-by: Maulik Patel <maulik.patel@arm.com>
Change-Id: I6fb3edadd1f5243de76b92c703417aaa9a209589

--- a/config/spe_config.cmake.in
+++ b/config/spe_config.cmake.in
@@ -39,6 +39,7 @@ set(MCUBOOT_S_IMAGE_MIN_VER                @MCUBOOT_S_IMAGE_MIN_VER@)
 set(MCUBOOT_MEASURED_BOOT                  @MCUBOOT_MEASURED_BOOT@)
 set(MCUBOOT_HW_KEY                         @MCUBOOT_HW_KEY@)
 set(MCUBOOT_BUILTIN_KEY                    @MCUBOOT_BUILTIN_KEY@)
+set(MCUBOOT_IMAGE_MULTI_SIG_SUPPORT        @MCUBOOT_IMAGE_MULTI_SIG_SUPPORT@)
 
 set(MCUBOOT_SECURITY_COUNTER_S             @MCUBOOT_SECURITY_COUNTER_S@)
 set(MCUBOOT_IMAGE_VERSION_S                @MCUBOOT_IMAGE_VERSION_S@)
