Platform: CS1000: Updates for TF-PSA-Crypto
- Change to the PSA API of the CC312-runtime driver and do not use the
  legacy Mbed TLS accelerator API (CC312_LEGACY_DRIVER_API_ENABLED = OFF)
  which is not supported anymore in TF-PSA-Crypto,
- Update BL1 crypto configuration. The TF_PSA_CRYPTO_CONFIG_FILE options
  that used the the Crypto service's default configuration was added
  in e941117. Later BL1 started to have its own configuration file
  (tfpsacrypto_base_config.h: common to all targets) that the platforms
  were able to override/extend using tfpsacrypto_extra_config.h
  (see d34f0e1). Remove the old config options so that the BL1
  configuration can take effect correctly (which was previously
  overwritten/redefined),
- Fix further TF-PSA-Crypto include path issues and build warnings,
  expose the private SHA-2 module of TF-PSA-Crypto.

Change-Id: I6edafd26390d19a089c5e2f14b0de7a5c5cbfd64
Signed-off-by: David Vincze <david.vincze@arm.com>

--- a/lib/ext/cryptocell-312-runtime/CMakeLists.txt
+++ b/lib/ext/cryptocell-312-runtime/CMakeLists.txt
@@ -91,7 +91,6 @@ target_compile_definitions(${CC312_CDMPU_TARGET}
 target_compile_definitions(${CC312_PSA_DRIVER_API_TARGET}
     PUBLIC
         MBEDTLS_PSA_CRYPTO_DRIVERS
-        PSA_CRYPTO_DRIVER_CC3XX
 )
 
 target_link_libraries(${CC312_PSA_DRIVER_API_TARGET}
@@ -110,4 +109,21 @@ target_link_libraries(${CC312_MBEDTLS_API_TARGET}
         ${CC312_LIB_TARGET}
     PRIVATE
         ${CC312_PLATFORM_DEPENDENCY}
+
+target_compile_definitions(${CC312_LIB_PREFIX}tfpsacrypto_config
+    INTERFACE
+        PSA_CRYPTO_DRIVER_CC3XX
 )
+
+# Export include directories to TF-PSA-Crypto config target. With defining
+# PSA_CRYPTO_DRIVER_CC3XX, the cc3xx_crypto_primitives_private.h header and
+# with it several headers from the CC-312 runtime library become visible
+# through the inclusion of the main PSA Crypto header file, i.e. psa/crypto.h.
+#
+foreach(_cc_target IN ITEMS ${CC312_PSA_DRIVER_API_TARGET}; ${CC312_LIB_TARGET}; ${CC312_PAL_TARGET})
+    get_target_property(_interface_include_dirs ${_cc_target} INTERFACE_INCLUDE_DIRECTORIES)
+
+    if(_interface_include_dirs AND NOT _interface_include_dirs STREQUAL "_interface_include_dirs-NOTFOUND")
+        target_include_directories(${CC312_LIB_PREFIX}tfpsacrypto_config INTERFACE ${_interface_include_dirs})
+    endif()
+endforeach()
