--- a/lib/ext/cryptocell-312-runtime/codesafe/CMakeLists.txt
+++ b/lib/ext/cryptocell-312-runtime/codesafe/CMakeLists.txt
@@ -1,11 +1,10 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2020-2021, Arm Limited. All rights reserved.
+# SPDX-FileCopyrightText: Copyright The TrustedFirmware-M Contributors
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
 #-------------------------------------------------------------------------------
 
 add_subdirectory(src/crypto_api)
-add_subdirectory(src/mbedtls_api)
 add_subdirectory(src/psa_driver_api)
 # add_subdirectory(src/secure_boot_debug)
