CC312: Updates for TF-PSA-Crypto
- Update header paths from Mbed TLS to TF-PSA-Crypto. Use internal
  headers where it is necessary,
- Replace the mbedcrypto CMake target with tfpsacrypto,
- Replace MBEDTLS_ config options with the corresponding PSA_WANT_
  equivalents, where applicable,
- Replace the mbedtls_hardware_poll() entropy collector callback with
  the new mbedtls_platform_get_entropy() call enabled by
  MBEDTLS_PSA_DRIVER_GET_ENTROPY. For more information, see:
  https://github.com/Mbed-TLS/TF-PSA-Crypto/blob/v1.0.0/docs/1.0-migration-guide.md#custom-entropy-collector

Change-Id: Icd5b0b54e2a574ded977b40feda2a0878a073f03
Signed-off-by: David Vincze <david.vincze@arm.com>

--- a/lib/ext/cryptocell-312-runtime/CMakeLists.txt
+++ b/lib/ext/cryptocell-312-runtime/CMakeLists.txt
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2020-2024, Arm Limited. All rights reserved.
+# SPDX-FileCopyrightText: Copyright The TrustedFirmware-M Contributors
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -50,7 +50,7 @@ target_compile_definitions(${CC312_LIB_TARGET}
 target_link_libraries(${CC312_LIB_TARGET}
     PRIVATE
         ${CC312_PAL_TARGET}
-        ${CC312_LIB_PREFIX}mbedcrypto
+        ${CC312_LIB_PREFIX}tfpsacrypto
         ${CC312_PLATFORM_DEPENDENCY}
     INTERFACE
         ${CC312_MBEDTLS_API_TARGET}
@@ -96,7 +96,7 @@ target_compile_definitions(${CC312_PSA_DRIVER_API_TARGET}
 
 target_link_libraries(${CC312_PSA_DRIVER_API_TARGET}
     PUBLIC
-        ${CC312_LIB_PREFIX}mbedcrypto
+        ${CC312_LIB_PREFIX}tfpsacrypto
     INTERFACE
         ${CC312_LIB_TARGET}
     PRIVATE
