BL2: Enable image validation skip hook when image binding is enabled
When image binding authenticates an image, MCUBoot can skip full image
validation to reduce boot time by enabling MCUBOOT_IMAGE_ACCESS_HOOKS.
Define MCUBOOT_IMAGE_ACCESS_HOOKS whenever image binding is enabled.

MCUBoot also requires a boot_read_image_header_hook when
MCUBOOT_IMAGE_ACCESS_HOOKS is ON. Add a stub implementation of that hook
for the RSE/TC target in tc platform specific boot_hal_bl2.c.

Signed-off-by: Maulik Patel <maulik.patel@arm.com>
Change-Id: I8fdaff716afd7df642bc0c7d306f0ea0a741584a

--- a/bl2/ext/mcuboot/include/mcuboot_config/mcuboot_config.h.in
+++ b/bl2/ext/mcuboot/include/mcuboot_config/mcuboot_config.h.in
@@ -41,6 +41,8 @@ extern "C" {
 #cmakedefine MCUBOOT_IMAGE_BINDING
 #endif /* MCUBOOT_IMAGE_BINDING */
 
+#cmakedefine MCUBOOT_IMAGE_ACCESS_HOOKS
+
 /*— How many RoTPK keys per image —*/
 #define MCUBOOT_ROTPK_MAX_KEYS_PER_IMAGE  @MCUBOOT_ROTPK_MAX_KEYS_PER_IMAGE@
 
