Lib: Use upstream libTPM
- Use upstream libTPM and deprecate local copy of this library,
  originally borrowed from TF-A.
- Targets/platform looking to consume this library must enable dTPM
  client partition.
- spi.h has been updated to match interface in libTPM and TF-A.
- dtpm_spi.c for rp2350 has been updated to match API signatures
  required by updated libTPM.

Change-Id: If4b717f33342b11940d6c473a103dbf169d6f474
Signed-off-by: Mudit Sharma <mudit.sharma@arm.com>

--- a/lib/ext/CMakeLists.txt
+++ b/lib/ext/CMakeLists.txt
@@ -21,4 +21,5 @@ add_subdirectory(tf-m-extras)
 
 if (${TFM_PARTITION_DTPM_CLIENT})
     add_subdirectory(eventlog)
+    add_subdirectory(dtpm)
 endif()
