Exception: add TFM_EXCEPTION_DUMP_LVL
By default the exception info logs are displayed at DEBUG level. But it
can help debugging, and avoid too many debug logs to display it at
another level. Create a TFM_EXCEPTION_DUMP_LVL flag to handle this, and
use new DUMP_MSG_RAW macro to display the trace. It will be set to
<LOG_LEVEL>_RAW depending on the flag TFM_EXCEPTION_DUMP_LVL.

Signed-off-by: Yann Gautier <yann.gautier@st.com>
Change-Id: I39fdfbc26c86e1a5d99ffa7428260025bf2c1e17

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -130,6 +130,7 @@ target_compile_definitions(platform_s
         $<$<BOOL:${CONFIG_TFM_BACKTRACE_ON_CORE_PANIC}>:LOG_LEVEL_UNPRIV=LOG_LEVEL_ERROR>
         $<$<BOOL:${OTP_NV_COUNTERS_RAM_EMULATION}>:OTP_NV_COUNTERS_RAM_EMULATION=1>
         $<$<BOOL:${TFM_EXCEPTION_INFO_DUMP}>:TFM_EXCEPTION_INFO_DUMP>
+        TFM_EXCEPTION_DUMP_LVL=${TFM_EXCEPTION_DUMP_LVL}
         $<$<OR:$<VERSION_GREATER:${TFM_ISOLATION_LEVEL},1>,$<STREQUAL:"${TEST_PSA_API}","IPC">>:CONFIG_TFM_ENABLE_MEMORY_PROTECT>
         $<$<STREQUAL:${CONFIG_TFM_FLOAT_ABI},hard>:CONFIG_TFM_FLOAT_ABI=2>
         $<$<STREQUAL:${CONFIG_TFM_FLOAT_ABI},soft>:CONFIG_TFM_FLOAT_ABI=0>
