--- a/bl2/ext/mcuboot/CMakeLists.txt
+++ b/bl2/ext/mcuboot/CMakeLists.txt
@@ -265,7 +265,7 @@ if (PLATFORM_DEFAULT_IMAGE_SIGNING)
 
     add_custom_command(OUTPUT tfm_s_signed.bin
         OUTPUT ${bin_dir}/tfm_s_signed.bin
-        DEPENDS tfm_s_bin signing_layout_s
+        DEPENDS ${bin_dir}/tfm_s.bin tfm_s_bin signing_layout_s
         DEPENDS $<IF:$<BOOL:${MCUBOOT_GENERATE_SIGNING_KEYPAIR}>,generated_private_key,>
         DEPENDS $<$<BOOL:${MCUBOOT_ENC_IMAGES}>:${MCUBOOT_KEY_ENC_NS}>
         WORKING_DIRECTORY ${MCUBOOT_PATH}/scripts
