Crypto: Define and install MBEDTLS_PSA_CRYPTO_PLATFORM_FILE
As MBEDTLS_PSA_CRYPTO_PLATFORM_FILE may be defined by the target - ensure
it is defined for S and NS builds as well as installed to api_ns folder.

Change-Id: I4502a82bddf9228aafabe39b40b641cd5b96b51e
Signed-off-by: Bohdan Hunko <Bohdan.Hunko@infineon.com>

--- a/secure_fw/partitions/crypto/CMakeLists.txt
+++ b/secure_fw/partitions/crypto/CMakeLists.txt
@@ -19,6 +19,7 @@ target_compile_definitions(psa_crypto_config
     INTERFACE
         $<BUILD_INTERFACE:MBEDTLS_PSA_CRYPTO_CONFIG_FILE="${TFM_MBEDCRYPTO_PSA_CRYPTO_CONFIG_PATH}">
         $<BUILD_INTERFACE:MBEDTLS_CONFIG_FILE="${TFM_MBEDCRYPTO_CONFIG_CLIENT_PATH}">
+        $<BUILD_INTERFACE:$<$<BOOL:${MBEDTLS_PSA_CRYPTO_PLATFORM_FILE}>:MBEDTLS_PSA_CRYPTO_PLATFORM_FILE="${MBEDTLS_PSA_CRYPTO_PLATFORM_FILE}">>
 )
 # The following is required for tfm_plat_crypto_nv_seed.h
 target_include_directories(psa_crypto_config
