Provision: Link the PSA Crypto client interface
Link the PSA Crypto client interface only to the provisioning bundle
artefact instead of a full-blown configuration used on the server side
(which pulls in internal header files that lead to build failures).
The provisioning bundle only needs crypto type and value definitions
of PSA Crypto.

Change-Id: If5252e780440228f924cae724096fe2e910f25b8
Signed-off-by: David Vincze <david.vincze@arm.com>

--- a/platform/ext/common/provisioning_bundle/CMakeLists.txt
+++ b/platform/ext/common/provisioning_bundle/CMakeLists.txt
@@ -65,6 +65,7 @@ target_include_directories(provisioning_bundle
 target_link_libraries(provisioning_bundle
     platform_s
     psa_interface
+    psa_crypto_config
 )
 
 target_compile_definitions(provisioning_bundle
@@ -75,7 +76,6 @@ target_compile_definitions(provisioning_bundle
         $<$<BOOL:${TFM_DUMMY_PROVISIONING}>:TFM_DUMMY_PROVISIONING>
         $<$<BOOL:${PLATFORM_DEFAULT_NV_COUNTERS}>:PLATFORM_DEFAULT_NV_COUNTERS>
         $<$<BOOL:${PLATFORM_DEFAULT_OTP_WRITEABLE}>:OTP_WRITEABLE>
-        TF_PSA_CRYPTO_CONFIG_FILE="${CMAKE_SOURCE_DIR}/lib/ext/tf-psa-crypto/tfpsacrypto_config/crypto_config_default.h"
 )
 
 add_custom_target(provisioning_bundle_bin
