Crypto: Added missing COMPILER_CP_FLAG
As they are required for correct compilation.

Fixes following errors during linking stage:
error: ../bin/tfm_s.axf uses VFP register arguments,
partitions/crypto/tfpsacrypto/core/libtfpsacrypto.a(psa_crypto_aead.o)
does not - failed to merge target specific data of file
partitions/crypto/tfpsacrypto/core/libtfpsacrypto.a(psa_crypto_aead.o)

Change-Id: I396a3b3f8ff7d16e2f3117e333d1e64586861ef7
Signed-off-by: Bohdan Hunko <Bohdan.Hunko@infineon.com>

--- a/secure_fw/partitions/crypto/CMakeLists.txt
+++ b/secure_fw/partitions/crypto/CMakeLists.txt
@@ -216,6 +216,18 @@ target_compile_options(${TF_PSA_CRYPTO_TARGET_PREFIX}p256m
         ${COMPILER_CP_FLAG}
 )
 
+# FPU flags for builtin
+target_compile_options(${TF_PSA_CRYPTO_TARGET_PREFIX}builtin
+    PRIVATE
+        ${COMPILER_CP_FLAG}
+)
+
+# FPU flags for everest
+target_compile_options(${TF_PSA_CRYPTO_TARGET_PREFIX}everest
+    PRIVATE
+        ${COMPILER_CP_FLAG}
+)
+
 # Passing TF-PSA-Crypto configuration and required include paths to the driver targets
 target_link_libraries(${TF_PSA_CRYPTO_TARGET_PREFIX}builtin PRIVATE crypto_service_tfpsacrypto_config)
 target_link_libraries(${TF_PSA_CRYPTO_TARGET_PREFIX}p256m   PRIVATE crypto_service_tfpsacrypto_config)
