CC312: Fix USE_MBEDTLS_CRYPTOCELL propagation
USE_MBEDTLS_CRYPTOCELL is referenced in the accelerator configuration
file. Therefore, it needs to be added to the crypto configuration
interface target to ensure it is correctly propagated to all consumers
of the configuration including the internal drivers of TF-PSA-Crypto.

Change-Id: I8dda9fd5226ec4be07ed84ec40d9647fc9077d50
Signed-off-by: David Vincze <david.vincze@arm.com>

--- a/lib/ext/cryptocell-312-runtime/CMakeLists.txt
+++ b/lib/ext/cryptocell-312-runtime/CMakeLists.txt
@@ -101,6 +101,7 @@ target_link_libraries(${CC312_PSA_DRIVER_API_TARGET}
 target_compile_definitions(${CC312_LIB_PREFIX}tfpsacrypto_config
     INTERFACE
         PSA_CRYPTO_DRIVER_CC3XX
+        USE_MBEDTLS_CRYPTOCELL
 )
 
 # Export include directories to TF-PSA-Crypto config target. With defining
